--- a/_posts/0000-01-02-bdewey182.md
+++ b/_posts/0000-01-02-bdewey182.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to Brian's Slide"
 ---
 This is Brian's slide.
 Use the left arrow to go back!
