--- a/_posts/0000-01-02-bdewey182.md
+++ b/_posts/0000-01-02-bdewey182.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to Brian's Slide"
 ---
-This is my awesome slide.
+This is my awesome slide. :tada:
 Use the left arrow to go back!
